# Async_Diffusion_Policy

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
async_dp_v8/: pyproject.toml  requirements.txt
async_dp_v8/configs/data/: augmentation.yaml  dataset_v8.yaml  phase_labeling.yaml
async_dp_v8/configs/model/: encoders.yaml  hybrid_diffusion.yaml  inference.yaml
async_dp_v8/configs/train/: losses.yaml  train_v8.yaml
async_dp_v8/data/interim/: contact_events.parquet  episodes_index_test.parquet  episodes_index_train.parquet  episodes_index_val.parquet  phase_labels.parquet  stats.json
async_dp_v8/runs/v8/: events.out.tfevents.1773969020.r3team.13956.0
async_dp_v8/scripts/collect/: calibrate_gripper.py  collect_episode_v8.py
async_dp_v8/scripts/deploy/: dry_run.py  dxl_probe.py  run_policy_v8.py  run_safe_home.py
async_dp_v8/scripts/eval/: offline_eval.py  replay_episode.py  rollout_benchmark.py
async_dp_v8/scripts/preprocess/: build_contact_labels.py  build_phase_labels.py  build_splits.py  compute_stats.py  convert_hdf5_to_v8.py  export_lerobot_style.py
async_dp_v8/scripts/remote/: mcp_training_server.py  setup_server.sh
async_dp_v8/scripts/train/: ablate_v8.py  train_v8.py  validate_v8.py
async_dp_v8/src/async_dp_v8.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
async_dp_v8/tests/: test_chunk_blender.py  test_contact_labeler.py  test_dataset.py  test_dxl_safety.py  test_inference_sm.py  test_integration.py  test_kinematics.py  test_losses.py  test_model.py  test_phase_labeler.py  test_phase_values.py  test_schema.py  test_window_alignment.py
(+106 files in other folders)
