[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-dp-v8"
version = "0.1.0"
description = "Asynchronous Diffusion Policy v8 for robotic wafer inspection"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "pyarrow",
    "h5py",
    "opencv-python",
    "pyyaml",
    "diffusers",
    "dynamixel-sdk",
    "scipy",
    "tqdm",
    "tensorboard",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
